--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"SWF_URL": "https://josephcrosmanplays532.github.io/animation/414827163ad4eb60",
-	"STORE_URL": "https://josephcrosmanplays532.github.io/store/3a981f5cb2739137",
-	"CLIENT_URL": "https://josephcrosmanplays532.github.io/static/ad44370a650793d9"
+	"SWF_URL": "https://dominicjennings.github.io/GoAnimate-Assets-2024/animation/414827163ad4eb60",
+	"STORE_URL": "https://dominicjennings.github.io/GoAnimate-Assets-2024/store/3a981f5cb2739137",
+	"CLIENT_URL": "https://dominicjennings.github.io/GoAnimate-Assets-2024/static/ad44370a650793d9"
 }
